--- a/src/components/About.css
+++ b/src/components/About.css
@@ -17,13 +17,13 @@
 
 .about .left {
 	display: flex;
-    flex: 1;
+	flex: 1;
 	flex-direction: column;
 	width: 100%;
-	justify-content: flex-end;
-    align-items: center;
+	justify-content: right;
+	align-items: center;
 	text-align: right;
-	margin-right: 300px;
+	margin-left: 250px;
 }
 
 .about .left img {
@@ -49,12 +49,13 @@
 
 .about .right {
 	display: flex;
-    flex: 2;
+	flex: 2;
 	flex-direction: column;
-    align-items: left;
-	width: 100%;
+	align-items: left;
+	width: 40%;
 	justify-content: flex-start;
 	text-align: left;
+	margin-right: 400px;
 }
 
 .about .right .name {
@@ -68,3 +69,91 @@
 	border-radius: 5px;
 	margin-bottom: 1rem;
 }
+
+.about .right .talent {
+	margin: 1rem 0;
+	font-size: 18px;
+	font-weight: 500;
+	text-transform: uppercase;
+}
+
+
+:root {
+    --primary-color: #D96AA7;
+    --secondary-color: #422C73;
+    --complimentary-color: #88BFB5;
+    --contrast-color: #F2E527;
+    --light-color: #D2A9D9;
+    }
+    
+    nav a {
+        font-size: 40px;
+        color: #fff;
+        text-decoration: none;
+        padding: 20px;
+        text-align: center;
+    }
+    
+    nav {
+        position: fixed;
+        left: 0;
+        z-index: 50;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        height: 100vh;
+        background: var(--secondary-color);
+    }
+    
+    section {
+        position: absolute;
+        top: 0;
+        height: 100vh;
+        width: 0;
+        opacity: 0;
+        transition: all ease-in .5s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    } 
+    
+    section h1 {
+        color: #fff;
+        font-size: 50px;
+        text-transform: uppercase;
+        opacity: 0;
+    }
+    
+    /* Styles applied on trigger */
+    section:target {
+        opacity: 1;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+    }
+    
+    section:target h1 {
+        opacity: 0;
+        animation: 2s fadeIn forwards .5s;
+    }
+    
+    #first {
+      background:var(--primary-color);
+    }
+    #second {
+        background: var(--complimentary-color);
+    }
+    
+    #third {
+        background: var(--contrast-color);
+    }
+    
+    #fourth {
+        background: var(--light-color);
+    }
+    
+    @keyframes fadeIn {
+        100% { opacity:1 }
+    }
