--- a/src/assets/sass/_about.scss
+++ b/src/assets/sass/_about.scss
@@ -1,137 +1,148 @@
-$maincolor:  #8aa8bd;
-$accent: #A8CC96;
+/** @format */
+
+$maincolor: #265c8b;
+$accent: #112b03;
 
 .expand {
-  float: right; 
-  display: inline; 
-  transition: all .2s ease;
-  -webkit-transition: all .2s ease;
-  margin: 0 10px;
+	float: left;
+	display: inline;
+	transition: all 0.2s ease;
+	-webkit-transition: all 0.2s ease;
+	margin: 0 10px;
+	align-items: center;
+	justify-content: center;
+	padding: 10px 0;
 }
 
-
 .sidebar-1 {
-  /* these are the styles for the container around the menu */
-  text-align: right;
-  padding: 0px;
-  display:inline-block;
-  box-shadow: 0 0px 1px 0 rgba(0,0,0,.2);
-  margin-left: 20px;
+	/* these are the styles for the container around the menu */
+	text-align: justify;
+	padding: 0px;
+	display: inline-block;
+	box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.2);
+	//   margin-left: 20px;
 }
 
 .sidebar-menu {
-  /*this style impacts the look of the heading containers. */
-  cursor: pointer;
-  padding: 10px;
-  background: #ffffff;
-  position: relative;
-  color:$maincolor;
-  border-bottom: 1px solid #dedede;
-  font-size: 1.5em;
-  font-weight: 300;
-  text-rendering: optimizeLegibility;
-  letter-spacing: .5px;
-  padding-right: 50px;
-  &:before, &:after {
-    content: "";
-    width: 3px;
-    height: 25px;
-    background: $accent;
-    border-radius: 3px;
-    position: absolute;
-    right: 22px;
-    top: calc(28.7px - 12.5px);
-    transition: all .2s ease;
-  }
-  &:after {
-    transform: rotate(90deg);
-  }
+	/*this style impacts the look of the heading containers. */
+	cursor: pointer;
+	padding: 10px;
+	background: var(--secondary);
+	position: relative;
+	color: $maincolor;
+	border-bottom: 1px solid #dedede;
+	font-size: 1.1rem;
+	color: rgb(1, 6, 29);
+	font-weight: 600;
+	text-rendering: optimizeLegibility;
+	letter-spacing: 0.5px;
+	padding-right: 50px;
+	align-items: center;
+	&:before,
+	&:after {
+		content: "";
+		width: 4px;
+		height: 14px;
+		background: $accent;
+		border-radius: 3px;
+		position: absolute;
+		right: 22px;
+		top: calc(28.7px - 12.5px);
+		transition: all 0.6s ease-in-out;
+	}
+	&:after {
+		transform: rotate(90deg);
+	}
 }
 
 .open:before {
-  animation: turn-plus;
-  animation-duration: .3s;
-  animation-fill-mode: forwards;
+	animation: turn-plus;
+	animation-duration: 0.3s;
+	animation-fill-mode: forwards;
 }
 
 .open:after {
-  animation: turn-crossbar;
-  animation-duration: .3s;
-  animation-fill-mode: forwards;
+	animation: turn-crossbar;
+	animation-duration: 0.3s;
+	animation-fill-mode: forwards;
 }
 
 @keyframes turn-plus {
-  0% {
-    transform: translate(0,0);
-  }
-  50% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(90deg);
-  }
+	0% {
+		transform: translate(0, 0);
+	}
+	50% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(90deg);
+	}
 }
 
 @keyframes turn-crossbar {
-  0% {
-    transform:none;
-    transform: rotate(90deg)
-  }
-  50% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(90deg);
-  }
+	0% {
+		transform: none;
+		transform: rotate(90deg);
+	}
+	50% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(90deg);
+	}
 }
 
-.sidebar-menu:hover {background: darken(#FFFFFF, 5%);}
+.sidebar-menu:hover {
+	background: var(--primary);
+	color: #ffff;
+}
 
 .sub-menu {
-  /*this style is for the sub-menu box*/
-  color: darken($maincolor,30%);
-  border-bottom: 1px solid #dedede;
-  font-size: 1em;
-  display: none;
-  &:last-child {
-    border-bottom: 0;
-  }
+	/*this style is for the sub-menu box*/
+	color: darken($maincolor, 30%);
+	border-bottom: 1px solid #dedede;
+	font-size: 1em;
+	display: none;
+	&:last-child {
+		border-bottom: 0;
+	}
 }
 
 .sub-menu li:hover {
-  background: #cccccc;
-  cursor: pointer;
+	background: #cccccc;
+	cursor: pointer;
 }
 
 .sub-menu li {
-  /*this styles individual elements in a sub-menu*/
-  padding: 10px;
-  background: #d7d7d7;
-  border-bottom: 1px solid #dedede;
-  &:last-child {
-    border-bottom: 0;
-  }
+	/*this styles individual elements in a sub-menu*/
+	padding: 10px;
+	background: #d7d7d7;
+	border-bottom: 1px solid #dedede;
+	&:last-child {
+		border-bottom: 0;
+	}
 }
 .sub-menu ul {
-  /*this just 0s out a bunch of stuff so that it plays nice with the list stylings*/
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+	/*this just 0s out a bunch of stuff so that it plays nice with the list stylings*/
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
 
 @media (max-width: 540px) {
-  .sidebar-menu {
-    font-size: 1em;
-    font-weight: 400;
-  }
-  .sub-menu {
-    font-weight: 400;
-  }
-  .sidebar-1 {
-    margin: 0;
-    width: 100%
-  }
-  .sidebar-menu:after, .sidebar-menu:before {
-    top: calc(23.5px - 12.5px);
-  }
+	.sidebar-menu {
+		font-size: 1em;
+		font-weight: 400;
+	}
+	.sub-menu {
+		font-weight: 400;
+	}
+	.sidebar-1 {
+		margin: 0;
+		width: 100%;
+	}
+	.sidebar-menu:after,
+	.sidebar-menu:before {
+		top: calc(23.5px - 12.5px);
+	}
 }
