--- a/src/components/About.css
+++ b/src/components/About.css
@@ -59,7 +59,7 @@
 }
 
 .about .right .name {
-	font-size: 20px;
+	font-size: 25px;
 	font-weight: bold;
 }
 
@@ -71,8 +71,8 @@
 }
 
 .about .right .talent {
-	margin: 1rem 0;
-	font-size: 18px;
+	margin: 1.2rem 0;
+	font-size: 20px;
 	font-weight: 500;
 	text-transform: uppercase;
 }
@@ -137,6 +137,11 @@
     section:target h1 {
         opacity: 0;
         animation: 2s fadeIn forwards .5s;
+    }
+
+    .block{
+        margin-bottom: 20px;
+        text-align: justify;
     }
     
     #first {
