--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -13,7 +13,7 @@
 }
 
 .experience .top {
-	margin: 4rem auto;
+	margin: 3rem auto;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -23,7 +23,7 @@
 
 .experience .top h2 {
 	text-align: center;
-	font-size: 40px;
+	font-size: 35px;
 	text-transform: capitalize;
 	color: rgb(131, 10, 10);
 	/* background-color: #fff; */
@@ -38,13 +38,14 @@
 }
 
 .experience .top p {
-	text-align: center;
+	text-align: justify;
 	padding: 10px;
 	font-weight: 500;
+	background-color: aquamarine;
+	opacity: 0.9;
+	border-radius: 12px 32px;
 	color: rgb(5, 5, 5);
-	box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
-		rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
-		rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .experience .top .bar {
@@ -57,14 +58,141 @@
 	margin-bottom: 2rem;
 }
 
-.experience .circular-rating {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
+.experience .middle {
 	margin: 4rem auto;
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 90%;
-	gap: 30px;
+	width: 600px;
+}
+
+.experience .middle h2 {
+	text-align: center;
+	font-size: 35px;
+	text-transform: capitalize;
+	color: rgb(131, 10, 10);
+	/* background-color: #fff; */
+	color: #202c2d;
+	color: #bc2e1e;
+	text-shadow: 0 1px 0px #788286, 1px 0 0px #9aa6ac, 1px 2px 1px #378ab4,
+		2px 1px 1px #b2bbbe, 2px 3px 2px #5a6164, 3px 2px 2px #a4aeb3,
+		3px 4px 2px #666c6e, 4px 3px 3px #99a1a5, 4px 5px 3px #7a8185,
+		5px 4px 2px #9ba6aa, 5px 6px 2px #868e92, 6px 5px 2px #afb5b8,
+		6px 7px 1px #686f72, 7px 6px 1px #828e94, 7px 8px 0px #378ab4,
+		8px 7px 0px #8f979b;
+}
+
+.experience .middle p {
+	text-align: center;
+	padding: 10px;
+	font-weight: 500;
+	background-color: white;
+	opacity: 0.8;
+	color: rgb(0, 0, 0);
+	box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+		rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+		rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+.experience .middle .bar {
+	width: 120px;
+	border-bottom: 6px solid var(--secondary);
+	border-radius: 5px;
+	left: 0;
+	align-items: center;
+	justify-content: center;
+	/* margin-bottom: 2rem; */
+}
+
+.experience .center p {
+	text-align: center;
+	padding: 10px;
+	font-weight: 500;
+	background-color: white;
+	opacity: 0.8;
+	color: rgb(0, 0, 0);
+	box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+		rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+		rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+	width: 800px;
+	margin: 0 0 13px 0;
+	text-align: justify;
+}
+
+.experience .center a {
+	color: #fff;
+}
+
+.experience .center {
+	text-align: center;
+}
+
+.experience .center .episode {
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	position: relative;
+}
+
+.experience .center .episode__number {
+	font-size: 10vw;
+	font-weight: 600;
+	padding: 10px 0;
+	position: sticky;
+	top: 0;
+	text-align: center;
+	height: calc(10vw + 20px);
+	transition: all 0.2s ease-in;
+}
+
+.experience .center .episode__content {
+	border-top: 2px solid #fff;
+	display: grid;
+	grid-template-columns: 1fr 4fr;
+	grid-gap: 10px;
+	padding: 15px 0;
+}
+
+.experience .center .episode__content .title {
+	font-weight: 600;
+}
+
+.experience .center .episode__content .story {
+	line-height: 26px;
+}
+
+@media (max-width: 600px) {
+	.episode__content {
+		grid-template-columns: 1fr;
+	}
+}
+
+@media (max-width: 576px) {
+	.episode__content .story {
+		font-size: 15px;
+	}
+}
+
+.experience .linear-rating {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	margin: 2rem auto;
+	justify-content: center;
+	align-items: center;
+	width: 60%;
+	gap: 20px;
+}
+
+.experience .linear-rating .title {
+	border: 2px solid white;
+	background-color: white;
+	opacity: 0.9;
+	color: #000;
+	padding: 5px;
+	width: 90px;
+	text-align: center;
+	font-weight: 600;
+	margin-bottom: 3px;
 }
 
 .experience .skills {
@@ -74,17 +202,19 @@
 	color: white; /* White text color */
 	align-items: center;
 	justify-content: center;
+	border-radius: 25px;
 }
 .experience .rating-bar {
 	background-color: #ddd;
 	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
 		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+	border-radius: 25px;
 	width: 100%;
 }
 
 .html {
 	border: 1px solid grey;
-	width: 90%;
+	width: 95%;
 	height: 10px;
 	background-color: #04aa6d;
 	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
@@ -99,18 +229,82 @@
 		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 .js {
-	width: 65%;
+	width: 70%;
 	height: 10px;
 	border: 1px solid grey;
 	background-color: #f44336;
 	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
 		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
-.php {
-	width: 60%;
+.node {
+	width: 90%;
 	height: 10px;
 	border: 1px solid grey;
-	background-color: #808080;
+	background-color: #ece911;
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+.react {
+	width: 80%;
+	height: 10px;
+	border: 1px solid grey;
+	background-color: #2c29e2;
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+.aws {
+	width: 40%;
+	height: 10px;
+	border: 1px solid grey;
+	background-color: #11ecec;
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+.redux {
+	width: 95%;
+	height: 10px;
+	border: 1px solid grey;
+	background-color: #c011ec;
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+.mysql {
+	width: 85%;
+	height: 10px;
+	border: 1px solid grey;
+	background-color: #ec7311;
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+.laravel {
+	width: 75%;
+	height: 10px;
+	border: 1px solid grey;
+	background-color: #0c3953;
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+.api {
+	width: 100%;
+	height: 10px;
+	border: 1px solid grey;
+	background-color: #53520e;
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+.webpack {
+	width: 85%;
+	height: 10px;
+	border: 1px solid grey;
+	background-color: #51105a;
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+.mongo {
+	width: 90%;
+	height: 10px;
+	border: 1px solid grey;
+	background-color: #0b4421;
 	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
 		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
