--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,29 +1,27 @@
 /** @format */
 .about {
 	width: 100%;
-	padding: 1rem 0;
 	background-color: var(--background);
-	/* clip-path: polygon(0 0, 100% 10%, 100% 100%, 0% 90%); */
 }
 
 .about .container {
 	display: flex;
 	/* grid-template-columns: repeat(2, 1fr); */
-	margin: 4rem auto;
+	padding: 3rem;
 	justify-content: space-between;
 	align-items: center;
-	padding: 1rem;
+	align-items: center;
 }
 
 .about .left {
 	display: flex;
-	flex: 1;
+	flex: 1.5;
+	/* width: 1500px; */
 	flex-direction: column;
 	width: 100%;
 	justify-content: right;
 	align-items: center;
 	text-align: right;
-	margin-left: 250px;
 }
 
 .about .left img {
@@ -49,13 +47,13 @@
 
 .about .right {
 	display: flex;
-	flex: 2;
 	flex-direction: column;
 	align-items: left;
-	width: 40%;
-	justify-content: flex-start;
+	justify-content: left;
 	text-align: left;
-	margin-right: 400px;
+	margin: 0 200px;
+	flex: 2;
+	width: 100%;
 }
 
 .about .right .name {
@@ -77,88 +75,98 @@
 	text-transform: uppercase;
 }
 
-
 :root {
-    --primary-color: #D96AA7;
-    --secondary-color: #422C73;
-    --complimentary-color: #88BFB5;
-    --contrast-color: #F2E527;
-    --light-color: #D2A9D9;
-    }
-    
-    nav a {
-        font-size: 40px;
-        color: #fff;
-        text-decoration: none;
-        padding: 20px;
-        text-align: center;
-    }
-    
-    nav {
-        position: fixed;
-        left: 0;
-        z-index: 50;
-        display: flex;
-        justify-content: space-around;
-        flex-direction: column;
-        height: 100vh;
-        background: var(--secondary-color);
-    }
-    
-    section {
-        position: absolute;
-        top: 0;
-        height: 100vh;
-        width: 0;
-        opacity: 0;
-        transition: all ease-in .5s;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    } 
-    
-    section h1 {
-        color: #fff;
-        font-size: 50px;
-        text-transform: uppercase;
-        opacity: 0;
-    }
-    
-    /* Styles applied on trigger */
-    section:target {
-        opacity: 1;
-        position: absolute;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 10;
-    }
-    
-    section:target h1 {
-        opacity: 0;
-        animation: 2s fadeIn forwards .5s;
-    }
+	--primary-color: #d96aa7;
+	--secondary-color: #422c73;
+	--complimentary-color: #88bfb5;
+	--contrast-color: #f2e527;
+	--light-color: #d2a9d9;
+}
 
-    .block{
-        margin-bottom: 20px;
-        text-align: justify;
-    }
-    
-    #first {
-      background:var(--primary-color);
-    }
-    #second {
-        background: var(--complimentary-color);
-    }
-    
-    #third {
-        background: var(--contrast-color);
-    }
-    
-    #fourth {
-        background: var(--light-color);
-    }
-    
-    @keyframes fadeIn {
-        100% { opacity:1 }
-    }
+nav a {
+	font-size: 40px;
+	color: #fff;
+	text-decoration: none;
+	padding: 20px;
+	text-align: center;
+}
+
+nav {
+	position: fixed;
+	left: 0;
+	z-index: 50;
+	display: flex;
+	justify-content: space-around;
+	flex-direction: column;
+	height: 100vh;
+	background: var(--secondary-color);
+}
+
+section {
+	position: absolute;
+	top: 0;
+	height: 100vh;
+	width: 0;
+	opacity: 0;
+	transition: all ease-in 0.5s;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+section h1 {
+	color: #fff;
+	font-size: 50px;
+	text-transform: uppercase;
+	opacity: 0;
+}
+
+/* Styles applied on trigger */
+section:target {
+	opacity: 1;
+	position: absolute;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 10;
+}
+
+section:target h1 {
+	opacity: 0;
+	animation: 2s fadeIn forwards 0.5s;
+}
+
+.block {
+	margin-bottom: 20px;
+	text-align: justify;
+}
+
+#first {
+	background: var(--primary-color);
+}
+#second {
+	background: var(--complimentary-color);
+}
+
+#third {
+	background: var(--contrast-color);
+}
+
+#fourth {
+	background: var(--light-color);
+}
+
+@keyframes fadeIn {
+	100% {
+		opacity: 1;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.about .container {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		gap: 1rem;
+	}
+}
