--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -6,12 +6,14 @@
 	align-items: center;
 	background: linear-gradient(coral, rebeccapurple);
 	border: 10px solid white;
-	/* min-height: 100vh; */
-	align-items: center;
-	justify-content: center;
 }
 
 .portfolio .container {
+	display: flex;
+	flex-direction: column;
+	margin: 1rem;
+	align-items: center;
+	justify-content: center;
 	position: relative;
 	-webkit-perspective: 1000;
 	-moz-perspective: 1000;
@@ -27,13 +29,12 @@
 }
 
 .portfolio .top {
-	margin: 4rem auto;
+	margin: 4rem;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
 	justify-content: center;
 	align-items: center;
-	width: 500px;
 }
 
 .portfolio .top h2 {
@@ -55,13 +56,13 @@
 	grid-template-columns: repeat(4, 1fr);
 	align-items: center;
 	justify-content: center;
-	width: 70%;
-	gap: 3rem;
-	margin: 3rem auto;
+	width: 90%;
+	grid-gap: 3rem;
 }
 .portfolio .card {
-	width: 400px;
-	height: 275px;
+	width: 350px;
+	height: 215px;
+	margin: 1rem;
 	box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.7), 0 17px 17px 0 rgba(0, 0, 0, 0.5);
 	position: relative;
 	-webkit-transform: rotate(0deg);
@@ -209,4 +210,18 @@
 	font-style: normal;
 	text-transform: none;
 	font-family: "Playfair Display", serif;
+}
+
+@media screen and (max-width: 480px) {
+	.portfolio {
+		height: 320vh;
+	}
+	.portfolio .top h2 {
+		font-size: 22px;
+	}
+
+	.portfolio .bottom {
+		display: flex;
+		flex-direction: column;
+	}
 }
