--- a/src/components/Skill.css
+++ b/src/components/Skill.css
@@ -1,43 +1,41 @@
 /** @format */
 
 .skill {
-	height: 95vh;
+	height: 110vh;
 	width: 100%;
 	background-color: #d7f7f7;
-	clip-path: polygon(0 0, 100% 10%, 100% 100%, 0% 90%);
+	clip-path: polygon(0 0, 100% 5%, 100% 100%, 0% 95%);
 	color: #000;
 }
 
 .skill .container {
 	display: flex;
 	flex-direction: column;
-	/* grid-template-columns: repeat(2, 1fr); */
 	justify-content: center;
 	align-items: center;
-	padding: 1rem;
+	padding: 1.5rem;
 }
 
 .skill .top {
-	margin: 4rem auto;
+	margin: 3rem 0;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
 	justify-content: center;
 	align-items: center;
-	width: 500px;
 }
 
 .skill .top h2 {
 	text-align: center;
-    text-transform: capitalize;
+	text-transform: capitalize;
+	color: #000;
 	/* margin-bottom: 20px; */
 }
 
-
-.skill .top p{
-    text-align: center;
-    color: rgb(39, 39, 39);
-    
+.skill .top p {
+	text-align: center;
+	color: rgb(39, 39, 39);
+	width: 500px;
 }
 
 .skill .top .bar {
@@ -55,8 +53,8 @@
 	grid-template-columns: repeat(3, 1fr);
 	align-items: center;
 	justify-content: center;
+	gap: 2rem;
 	width: 70%;
-    gap: 3rem;
 }
 
 .skill .bottom .wrapper {
@@ -64,23 +62,71 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	padding: 12px 22px;
+	/* margin: 0.4rem; */
+	width: 22rem;
+	height: 22rem;
+	border-radius: 24px;
+	border: 1px solid #d3d3d3;
+	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+		rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 	text-align: center;
 }
 
-.skill .bottom .wrapper h1{
+.skill .bottom .wrapper h1 {
 	margin-bottom: 10px;
 }
 
 .skill .bottom .icon {
-    padding: 13px;
+	padding: 13px;
 	font-size: 60px;
 	border: 0.5px solid rgb(192, 192, 192);
 	border-radius: 50%;
-    height: 100px;
-    width: 100px;
+	height: 100px;
+	width: 100px;
 }
 
-.skill .bottom .icon:hover{
-    background-color: #000;
-    color: #fff;
+.skill .bottom .icon:hover {
+	background-color: #000;
+	color: #fff;
+}
+
+@media screen and (max-width: 480px) {
+	.skill {
+		height: 320vh;
+		width: 100%;
+		background-color: #d7f7f7;
+		clip-path: polygon(0 0, 100% 2%, 100% 100%, 0% 98%);
+		color: #000;
+	}
+	.skill .top h2 {
+		text-align: center;
+		text-transform: capitalize;
+		color: #000;
+		font-size: 22px;
+		/* margin-bottom: 20px; */
+	}
+
+	.skill .top p {
+		text-align: center;
+		width: 80%;
+		color: rgb(39, 39, 39);
+	}
+
+	.skill .bottom {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+	}
+
+	.skill .bottom .wrapper h1 {
+		color: #000;
+	}
+
+	.skill .bottom .wrapper p {
+		color: #000;
+	}
 }
