--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ li {
 }
 
 .btn {
-	padding: 8px 25px;
+	padding: 10px 32px;
 	border: 1px solid;
 	background-color: transparent;
 	color: #fff;
@@ -97,6 +97,7 @@ li {
 	font-size: 1.1rem;
 	font-weight: 600;
 	cursor: pointer;
+	text-transform: capitalize;
 }
 
 .btn:hover {
@@ -132,7 +133,7 @@ code {
 		monospace;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 480) {
 	h1 {
 		font-size: 2.1rem;
 		line-height: 1.2rem;
