--- a/src/assets/sass/_counter.scss
+++ b/src/assets/sass/_counter.scss
@@ -30,7 +30,7 @@ $color6: #aff1b6;
 		margin: $spacing 0;
 		border-radius: $bdrs;
 		align-self: center;
-		// width: 60vw;
+		width: 60vw;
 
 		&:nth-child(2n + 1) {
 			flex-direction: row-reverse;
@@ -228,6 +228,11 @@ $color6: #aff1b6;
 }
 
 @media screen and (max-width: 480px) {
+	.timeline{
+		&__event{
+			width: 85vw;
+		}
+	}
 	.timeline {
 		&__event {
 			&__content {
