--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -4,9 +4,10 @@
 	/* margin: 10rem auto; */
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
+	height: 110vh;
 	width: 100%;
-	background-image: url("../assets/images/19.jpg");
+	background-image: url("../assets/images/18.jpeg");
+	background-size: cover;
 	object-fit: cover;
 	overflow: hidden;
 	/* opacity: 0.9; */
@@ -318,6 +319,6 @@
 
 @media screen and (max-width: 480px) {
 	.experience {
-		height: 110vh;
+		height: 120vh;
 	}
 }
