--- a/src/index.css
+++ b/src/index.css
@@ -89,19 +89,25 @@ li {
 
 .btn {
 	padding: 10px 32px;
-	border: 1px solid;
 	background-color: transparent;
-	color: #fff;
-	border-radius: 20px 4px;
-	font: inherit;
-	font-size: 1.1rem;
+	border: 2px solid rgb(255, 81, 0);
+	border-radius: 12px 32px;
+	font-family: "Poppins";
+	color:hsl(0, 0%, 93%);
+	font-size: 20px;
 	font-weight: 600;
+	margin: 10px 0px;
 	cursor: pointer;
-	text-transform: capitalize;
+	box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+		rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+		rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+		rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+		rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 .btn:hover {
-	background-color: var(--salmon-pink);
+	background-color: aqua;
+	color: #000;
 }
 
 .btn:hover {
