--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -6,7 +6,7 @@
 	justify-content: center;
 	height: 110vh;
 	width: 100%;
-	background-image: url("../assets/images/18.jpeg");
+	background-image: url("../assets/images/17.jpg");
 	background-size: cover;
 	object-fit: cover;
 	overflow: hidden;
@@ -193,9 +193,9 @@
 
 .experience .linear-rating .title {
 	border: 2px solid white;
-	background-color: white;
+	background-color: rgb(1, 62, 65);
 	opacity: 0.9;
-	color: #000;
+	color: rgb(255, 255, 255);
 	padding: 5px;
 	width: 90px;
 	text-align: center;
